# ECSSpaceSim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bgfxGenie.bat  cmake.sh  premake5.lua
Demos/: CMakeLists.txt
Demos/3D/: CMakeLists.txt  Controls.cpp  Controls.h  Main.cpp
Demos/3D/Resources/Shaders/: default_fs.sc  screen_vs.sc
Demos/PongClient/: CMakeLists.txt  CompileShaders.cmd  Main.cpp  imgui.ini
Demos/PongClient/Resources/Shaders/: screen_fs.sc  screen_vs.sc  varying.def.sc
Demos/PongClient/Resources/UI/: Pong.html
Demos/PongClient/src/: GameScene.cpp  GameScene.h  GameState.cpp  GameState.h  GameUI.cpp  GameUI.h  Main.cpp
Demos/PongServer/: CMakeLists.txt  Main.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj.filters
Engine/Components/: Camera.h
Engine/Data/: Mesh.cpp  Mesh.h
Engine/Modules/Core/: Core.cpp  Core.h
Engine/Modules/IMGUI/: IMGUI.cpp  IMGUI.h
Engine/Modules/Input/: Bindings.cpp  Bindings.h  Input.cpp  Input.h  InputDefs.cpp  InputDefs.h
Engine/Modules/Networking/: Connection.cpp  Connection.h  NetDefs.h  Networking.cpp  Networking.h  Packet.cpp  Packet.h  Server.cpp  Server.h
Engine/Modules/Networking/TCP/: TCPConnection.cpp  TCPConnection.h  TCPPacket.cpp  TCPPacket.h
Engine/Modules/Rendering/: Rendering.cpp  Rendering.h
Engine/Modules/UI/: UI.cpp  UI.h  ULInput.h
Engine/docs/Manual/Modules/: Input.md  Networking.md
Engine/docs/dev/: Notes.md  todo.md
Engine/include/: Engine.h
Engine/include/modules/core/: Core.h
Engine/include/modules/input/: Bindings.h  Input.h  InputDefs.h
Engine/include/modules/networking/: Connection.h  NetDefs.h  Networking.h  Packet.h
Engine/include/modules/networking/tcp/: TCPConnection.h  TCPNetworking.h  TCPPacket.h
Engine/include/modules/rendering/: BgfxInit.h  DiligentInit.h  Mesh.h  Rendering.h
Engine/include/modules/ui/: UI.h
Engine/include/utility/: CCXBimap.h  CCXConsoleColour.h  CCXDefs.h  CCXEvent.h  CCXFile.h  CCXMath.h  CCXMemory.h  CCXSerialisation.h  CCXShader.h  CCXThread.h  CCXType.h  ConcurrentQueue.h  ConsoleLogging.h
Engine/src/: Engine.cpp
Engine/src/modules/core/: Core.cpp
Engine/src/modules/imgui/: IMGUI.cpp
Engine/src/modules/input/: Bindings.cpp  Input.cpp  InputDefs.cpp
Engine/src/modules/networking/: Connection.cpp  Packet.cpp
Engine/src/modules/networking/tcp/: TCPConnection.cpp  TCPPacket.cpp
Engine/src/modules/rendering/: BgfxInit.cpp  DiligentInit.cpp  Mesh.cpp  Rendering.cpp
Engine/src/modules/ui/: UI.cpp
Engine/src/utility/: CCXConsoleColour.cpp  CCXFile.cpp  CCXShader.cpp  CCXThread.cpp  ConsoleLogging.cpp
Engine/utility/: CCXBimap.h  CCXCommon.cpp  CCXEvent.h  CCXFile.cpp  CCXMath.h  CCXMemory.h  CCXSerialisation.h  CCXShader.cpp  CCXType.h  ConsoleLogging.cpp  ConsoleLogging.h  Conversion.h
EngineTests/: EngineTests.cpp
SpaceSim/: Controls.cpp  Controls.h  Main.cpp
SpaceSim/Resources/Shaders/: default_vs.sc  varying.def.sc
cmakeModules/: common.cmake
lib/: CMakeLists.txt  assimp-vc142-mt.lib  assimp-vc142-mtd.lib  flecs-debug.lib  flecs-release.lib
lib/src/: CMakeLists.txt  asio.cmake  blibs.cmake  imgui.cmake
lib/src/cmake_blibs/: bgfx.cmake  bx.cmake  examples.cmake  shared.cmake  version.cmake
make/: VS2019.bat  VS2022.bat
